src/grammar/PuLangParser.cpp

// Generated from .\PuLang.g4 by ANTLR 4.9.2


#include "PuLangListener.h"
#include "PuLangVisitor.h"

#include "PuLangParser.h"


using namespace antlrcpp;
using namespace antlr4;

PuLangParser::PuLangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PuLangParser::~PuLangParser() {
  delete _interpreter;
}

std::string PuLangParser::getGrammarFileName() const {
  return "PuLang.g4";
}

const std::vector<std::string>& PuLangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PuLangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- LiteralValueContext ------------------------------------------------------------------

PuLangParser::LiteralValueContext::LiteralValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PuLangParser::LiteralValueContext::String() {
  return getToken(PuLangParser::String, 0);
}

tree::TerminalNode* PuLangParser::LiteralValueContext::Integer() {
  return getToken(PuLangParser::Integer, 0);
}

tree::TerminalNode* PuLangParser::LiteralValueContext::Decimal() {
  return getToken(PuLangParser::Decimal, 0);
}

tree::TerminalNode* PuLangParser::LiteralValueContext::Id() {
  return getToken(PuLangParser::Id, 0);
}


size_t PuLangParser::LiteralValueContext::getRuleIndex() const {
  return PuLangParser::RuleLiteralValue;
}

void PuLangParser::LiteralValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PuLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteralValue(this);
}

void PuLangParser::LiteralValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PuLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteralValue(this);
}


antlrcpp::Any PuLangParser::LiteralValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PuLangVisitor*>(visitor))
    return parserVisitor->visitLiteralValue(this);
  else
    return visitor->visitChildren(this);
}

PuLangParser::LiteralValueContext* PuLangParser::literalValue() {
  LiteralValueContext *_localctx = _tracker.createInstance<LiteralValueContext>(_ctx, getState());
  enterRule(_localctx, 0, PuLangParser::RuleLiteralValue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(4);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PuLangParser::Id)
      | (1ULL << PuLangParser::String)
      | (1ULL << PuLangParser::Integer)
      | (1ULL << PuLangParser::Decimal))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

PuLangParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PuLangParser::LiteralValueContext* PuLangParser::ExpressionContext::literalValue() {
  return getRuleContext<PuLangParser::LiteralValueContext>(0);
}

std::vector<PuLangParser::ExpressionContext *> PuLangParser::ExpressionContext::expression() {
  return getRuleContexts<PuLangParser::ExpressionContext>();
}

PuLangParser::ExpressionContext* PuLangParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<PuLangParser::ExpressionContext>(i);
}

tree::TerminalNode* PuLangParser::ExpressionContext::POWER() {
  return getToken(PuLangParser::POWER, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::STAR() {
  return getToken(PuLangParser::STAR, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::DIV() {
  return getToken(PuLangParser::DIV, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::MOD() {
  return getToken(PuLangParser::MOD, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::ADD() {
  return getToken(PuLangParser::ADD, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::MINUS() {
  return getToken(PuLangParser::MINUS, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::EQUAL() {
  return getToken(PuLangParser::EQUAL, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::NOT_EQ() {
  return getToken(PuLangParser::NOT_EQ, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::GREATER_THAN() {
  return getToken(PuLangParser::GREATER_THAN, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::LESS_THAN() {
  return getToken(PuLangParser::LESS_THAN, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::AND() {
  return getToken(PuLangParser::AND, 0);
}

tree::TerminalNode* PuLangParser::ExpressionContext::OR() {
  return getToken(PuLangParser::OR, 0);
}


size_t PuLangParser::ExpressionContext::getRuleIndex() const {
  return PuLangParser::RuleExpression;
}

void PuLangParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PuLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void PuLangParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PuLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


antlrcpp::Any PuLangParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PuLangVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


PuLangParser::ExpressionContext* PuLangParser::expression() {
   return expression(0);
}

PuLangParser::ExpressionContext* PuLangParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  PuLangParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  PuLangParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, PuLangParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(7);
    literalValue();
    _ctx->stop = _input->LT(-1);
    setState(29);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(27);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(9);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(10);
          match(PuLangParser::POWER);
          setState(11);
          expression(7);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(12);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(13);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << PuLangParser::STAR)
            | (1ULL << PuLangParser::DIV)
            | (1ULL << PuLangParser::MOD))) != 0))) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(14);
          expression(6);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(15);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(16);
          _la = _input->LA(1);
          if (!(_la == PuLangParser::MINUS

          || _la == PuLangParser::ADD)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(17);
          expression(5);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(18);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(19);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << PuLangParser::EQUAL)
            | (1ULL << PuLangParser::NOT_EQ)
            | (1ULL << PuLangParser::GREATER_THAN)
            | (1ULL << PuLangParser::LESS_THAN))) != 0))) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(20);
          expression(4);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(21);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(22);
          match(PuLangParser::AND);
          setState(23);
          expression(3);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(24);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(25);
          match(PuLangParser::OR);
          setState(26);
          expression(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(31);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

bool PuLangParser::sempred(RuleContext *context, size_t ruleIndex, size_t predicateIndex) {
  switch (ruleIndex) {
    case 1: return expressionSempred(dynamic_cast<ExpressionContext *>(context), predicateIndex);

  default:
    break;
  }
  return true;
}

bool PuLangParser::expressionSempred(ExpressionContext *_localctx, size_t predicateIndex) {
  switch (predicateIndex) {
    case 0: return precpred(_ctx, 6);
    case 1: return precpred(_ctx, 5);
    case 2: return precpred(_ctx, 4);
    case 3: return precpred(_ctx, 3);
    case 4: return precpred(_ctx, 2);
    case 5: return precpred(_ctx, 1);

  default:
    break;
  }
  return true;
}

// Static vars and initialization.
std::vector<dfa::DFA> PuLangParser::_decisionToDFA;
atn::PredictionContextCache PuLangParser::_sharedContextCache;

// We own the ATN which in turn owns the ATN states.
atn::ATN PuLangParser::_atn;
std::vector<uint16_t> PuLangParser::_serializedATN;

std::vector<std::string> PuLangParser::_ruleNames = {
  "literalValue", "expression"
};

std::vector<std::string> PuLangParser::_literalNames = {
  "", "'_'", "':'", "';'", "'\"'", "','", "'('", "')'", "'{'", "'}'", "'->'", 
  "'='", "'=='", "'!='", "'>'", "'<'", "'-'", "'.'", "'**'", "'*'", "'/'", 
  "'%'", "'+'", "'and'", "'or'"
};

std::vector<std::string> PuLangParser::_symbolicNames = {
  "", "UNDERLINE", "COLON", "SEMI_COLON", "QUOTE", "COMMA", "OPEN_PAREN", 
  "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", "ARROW", "EQ", "EQUAL", "NOT_EQ", 
  "GREATER_THAN", "LESS_THAN", "MINUS", "DOT", "POWER", "STAR", "DIV", "MOD", 
  "ADD", "AND", "OR", "Comment", "WS", "Id", "String", "Integer", "Decimal"
};

dfa::Vocabulary PuLangParser::_vocabulary(_literalNames, _symbolicNames);

std::vector<std::string> PuLangParser::_tokenNames;

PuLangParser::Initializer::Initializer() {
	for (size_t i = 0; i < _symbolicNames.size(); ++i) {
		std::string name = _vocabulary.getLiteralName(i);
		if (name.empty()) {
			name = _vocabulary.getSymbolicName(i);
		}

		if (name.empty()) {
			_tokenNames.push_back("<INVALID>");
		} else {
      _tokenNames.push_back(name);
    }
	}


  _serializedATN.insert(_serializedATN.end(), serializedATNSegment0,
    serializedATNSegment0 + sizeof(serializedATNSegment0) / sizeof(serializedATNSegment0[0]));


  atn::ATNDeserializer deserializer;
  _atn = deserializer.deserialize(_serializedATN);

  size_t count = _atn.getNumberOfDecisions();
  _decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    _decisionToDFA.emplace_back(_atn.getDecisionState(i), i);
  }
}

PuLangParser::Initializer PuLangParser::_init;
